--- a/Speciality-Metals/src/Components/Login/Login/login/login.component.html
+++ b/Speciality-Metals/src/Components/Login/Login/login/login.component.html
@@ -1,1 +1,32 @@
-<p>login works!</p>
+<div class="login-container">
+    <h1 class="welcome-heading">Welcome to Speciality Metals</h1>
+    <mat-card class="login-card">
+      <mat-card-content>
+        <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+          <mat-form-field appearance="fill" class="full-width">
+            <mat-label>Username</mat-label>
+            <input matInput formControlName="username" placeholder="Enter your username">
+            <mat-error *ngIf="loginForm.get('username')?.hasError('required')">
+              Username is required
+            </mat-error>
+          </mat-form-field>
+  
+          <mat-form-field appearance="fill" class="full-width">
+            <mat-label>Password</mat-label>
+            <input matInput [type]="'password'" formControlName="password" placeholder="Enter your password">
+            <mat-error *ngIf="loginForm.get('password')?.hasError('required')">
+              Password is required
+            </mat-error>
+          </mat-form-field>
+  
+          <button mat-raised-button color="primary" type="submit" class="login-button">
+            Login
+          </button>
+        </form>
+      </mat-card-content>
+      <mat-card-footer>
+        <p class="footer-text">Created by TheCouncilLTD</p>
+      </mat-card-footer>
+    </mat-card>
+  </div>
+  
