--- a/Speciality-Metals/src/Components/Login/Login/login/login.component.html
+++ b/Speciality-Metals/src/Components/Login/Login/login/login.component.html
@@ -3,19 +3,18 @@
     <mat-card class="login-card">
       <mat-card-content>
         <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+          
+          <!-- Display the error message if there is one -->
+          <div *ngIf="loginError" class="error-message">
+            {{ loginError }}
+          </div>
+          
+          <!-- Employee Code as Password Field -->
           <mat-form-field appearance="fill" class="full-width">
-            <mat-label>Username</mat-label>
-            <input matInput formControlName="username" placeholder="Enter your username">
-            <mat-error *ngIf="loginForm.get('username')?.hasError('required')">
-              Username is required
-            </mat-error>
-          </mat-form-field>
-  
-          <mat-form-field appearance="fill" class="full-width">
-            <mat-label>Password</mat-label>
-            <input matInput [type]="'password'" formControlName="password" placeholder="Enter your password">
-            <mat-error *ngIf="loginForm.get('password')?.hasError('required')">
-              Password is required
+            <mat-label>Employee Code</mat-label>
+            <input matInput [type]="'password'" formControlName="employeeCode" placeholder="Enter your Employee Code">
+            <mat-error *ngIf="loginForm.get('employeeCode')?.hasError('required')">
+              Employee Code is required
             </mat-error>
           </mat-form-field>
   
