--- a/Speciality-Metals/src/Components/Login/home/home.component.css
+++ b/Speciality-Metals/src/Components/Login/home/home.component.css
@@ -1,42 +1,45 @@
 .home-container {
-    padding: 40px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  .row {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 30px;
-    width: 100%;
-  }
-  
-  .menu-card {
-    flex: 1;
-    margin: 0 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: black; /* Make the card background transparent */
-    box-shadow: none; /* Remove the shadow */
-  }
-  
-  .menu-button {
-    width: 100%;
-    height: 80px; /* Increase button height */
-    font-size: 18px; /* Increase font size */
-    background-color: black;
-    color: white;
-    border-radius: 8px;
-  }
-  
-  .menu-button mat-icon {
-    margin-right: 8px;
-    font-size: 24px; /* Adjust icon size */
-  }
-  
-  .spacer {
-    flex: 1 1 auto;
-  }
-  
+  padding: 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.row {
+  width: 100%;
+  margin-bottom: 15px; /* Adjusted for better spacing between rows */
+}
+
+.menu-card {
+  width: 50%; /* Ensure the card takes full width */
+  margin-bottom: 25px; /* Space between each card */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  box-shadow: none; /* Remove the shadow */
+  color: black;
+}
+
+.menu-button {
+  width: 100%;
+  height: 80px; /* Increase button height */
+  font-size: 18px; /* Increase font size */
+  background-color: white;
+  color: black;
+  border-radius: 8px;
+}
+
+.menu-button mat-icon {
+  margin-right: 8px;
+  font-size: 18px; /* Adjust icon size */
+}
+
+.spacer {
+  flex: 1 1 auto;
+  text-align: center;
+}
+
+.photo{
+  font-size: 20;
+}
