--- a/Speciality-Metals/src/Components/Login/home/home.component.html
+++ b/Speciality-Metals/src/Components/Login/home/home.component.html
@@ -1,49 +1,44 @@
 <mat-toolbar color="primary">
-    <span>Speciality Metals</span>
+    <span class="heading">Speciality Metals</span>
     <span class="spacer"></span>
     <a mat-button color="warn" routerLink="/logout">Log out</a>
+    <img class="photo"  src=".../src/assets/Special_Metals_Corporation_logo.svg.png">
   </mat-toolbar>
   
   <div class="home-container">
-    <!-- First Row -->
-    <div class="row">
-      <mat-card class="menu-card">
-        <button mat-raised-button class="menu-button" routerLink="/" [disabled]="('make-sale')">
-          <mat-icon>attach_money</mat-icon> Supplier
-        </button>
-      </mat-card>
-      <mat-card class="menu-card">
-        <button mat-raised-button class="menu-button" routerLink="/" [disabled]="('shift-roster')">
-          <mat-icon>calendar_today</mat-icon> Incoming products 
-        </button>
-      </mat-card>
-      <mat-card class="menu-card">
-        <button mat-raised-button class="menu-button" routerLink="/" [disabled]="('table-bookings')">
-          <mat-icon>event_note</mat-icon> Outgoing products 
-        </button>
-      </mat-card>
-    </div>
-  
-    <!-- Second Row -->
-    <div class="row">
-      <mat-card class="menu-card">
-        <button mat-raised-button class="menu-button" routerLink="/" [disabled]="('owner')">
-          <mat-icon>person</mat-icon> Staff 
-        </button>
-      </mat-card>
-      <mat-card class="menu-card">
-        <button mat-raised-button class="menu-button" routerLink="/" [disabled]="('admin')">
-          <mat-icon>settings</mat-icon> Reporting 
-        </button>
-      </mat-card>
-      <mat-card class="menu-card">
-        <button mat-raised-button class="menu-button" routerLink="/" [disabled]="('inventory')">
-          <mat-icon>inventory</mat-icon> Products 
-        </button>
-      </mat-card>
-    </div>
-  
-
-  
-
-  
+    <mat-card class="menu-card">
+      <button mat-raised-button class="menu-button" routerLink="/" [disabled]="('make-sale')">
+        <mat-icon>attach_money</mat-icon> Supplier
+      </button>
+    </mat-card>
+    
+    <mat-card class="menu-card">
+      <button mat-raised-button class="menu-button" routerLink="/" [disabled]="('shift-roster')">
+        <mat-icon>calendar_today</mat-icon> Incoming products 
+      </button>
+    </mat-card>
+    
+    <mat-card class="menu-card">
+      <button mat-raised-button class="menu-button" routerLink="/" [disabled]="('table-bookings')">
+        <mat-icon>event_note</mat-icon> Outgoing products 
+      </button>
+    </mat-card>
+    
+    <mat-card class="menu-card">
+      <button mat-raised-button class="menu-button" routerLink="/" [disabled]="('owner')">
+        <mat-icon>person</mat-icon> Staff 
+      </button>
+    </mat-card>
+    
+    <mat-card class="menu-card">
+      <button mat-raised-button class="menu-button" routerLink="/" [disabled]="('admin')">
+        <mat-icon>settings</mat-icon> Reporting 
+      </button>
+    </mat-card>
+    
+    <mat-card class="menu-card">
+      <button mat-raised-button class="menu-button" routerLink="/" [disabled]="('inventory')">
+        <mat-icon>inventory</mat-icon> Products 
+      </button>
+    </mat-card>
+  </div>
