--- a/Speciality-Metals/src/Components/Login/home/home.component.html
+++ b/Speciality-Metals/src/Components/Login/home/home.component.html
@@ -8,7 +8,7 @@
     <!-- First Row -->
     <div class="row">
       <mat-card class="menu-card">
-        <button mat-raised-button class="menu-button" routerLink="/" [disabled]="('make-sale')">
+        <button mat-raised-button class="menu-button" routerLink="/employees">
           <mat-icon>attach_money</mat-icon> Supplier
         </button>
       </mat-card>
@@ -27,7 +27,7 @@
     <!-- Second Row -->
     <div class="row">
       <mat-card class="menu-card">
-        <button mat-raised-button class="menu-button" routerLink="/" [disabled]="('owner')">
+        <button mat-raised-button class="menu-button" routerLink="/employee">
           <mat-icon>person</mat-icon> Staff 
         </button>
       </mat-card>
