--- a/Speciality-Metals/src/Components/Login/home/home.component.html
+++ b/Speciality-Metals/src/Components/Login/home/home.component.html
@@ -25,7 +25,7 @@
     </mat-card>
     
     <mat-card class="menu-card">
-      <button mat-raised-button class="menu-button" routerLink="/" [disabled]="('owner')">
+      <button mat-raised-button class="menu-button" routerLink="/employee" >
         <mat-icon>person</mat-icon> Staff 
       </button>
     </mat-card>
@@ -37,7 +37,7 @@
     </mat-card>
     
     <mat-card class="menu-card">
-      <button mat-raised-button class="menu-button" routerLink="/" [disabled]="('inventory')">
+      <button mat-raised-button class="menu-button" routerLink="/product">
         <mat-icon>inventory</mat-icon> Products 
       </button>
     </mat-card>
