Build/Components+Routes

--- a/Speciality-Metals/src/Components/Login/home/home.component.html
+++ b/Speciality-Metals/src/Components/Login/home/home.component.html
@@ -7,19 +7,19 @@
   
   <div class="home-container">
     <mat-card class="menu-card">
-      <button mat-raised-button class="menu-button" routerLink="/" [disabled]="('make-sale')">
+      <button mat-raised-button class="menu-button" routerLink="/supplier" >
         <mat-icon>attach_money</mat-icon> Supplier
       </button>
     </mat-card>
     
     <mat-card class="menu-card">
-      <button mat-raised-button class="menu-button" routerLink="/" [disabled]="('shift-roster')">
+      <button mat-raised-button class="menu-button" routerLink="/incoming" >
         <mat-icon>calendar_today</mat-icon> Incoming products 
       </button>
     </mat-card>
     
     <mat-card class="menu-card">
-      <button mat-raised-button class="menu-button" routerLink="/" [disabled]="('table-bookings')">
+      <button mat-raised-button class="menu-button" routerLink="/outgoing" >
         <mat-icon>event_note</mat-icon> Outgoing products 
       </button>
     </mat-card>
@@ -31,13 +31,13 @@
     </mat-card>
     
     <mat-card class="menu-card">
-      <button mat-raised-button class="menu-button" routerLink="/" [disabled]="('admin')">
+      <button mat-raised-button class="menu-button" routerLink="/reporting" >
         <mat-icon>settings</mat-icon> Reporting 
       </button>
     </mat-card>
     
     <mat-card class="menu-card">
-      <button mat-raised-button class="menu-button" routerLink="/product">
+      <button mat-raised-button class="menu-button" routerLink="/products">
         <mat-icon>inventory</mat-icon> Products 
       </button>
     </mat-card>
