--- a/Speciality-Metals/src/Components/Login/employee/employee-home/employee-home.component.html
+++ b/Speciality-Metals/src/Components/Login/employee/employee-home/employee-home.component.html
@@ -8,14 +8,14 @@
   <div class="home-container">
     
     <mat-card class="menu-card">
-      <button mat-raised-button class="menu-button" routerLink="/add-products" >
-        <mat-icon>event_note</mat-icon> Add product  
+      <button mat-raised-button class="menu-button" routerLink="/add-employee" >
+        <mat-icon>event_note</mat-icon> Add employee  
       </button>
     </mat-card>
     
     <mat-card class="menu-card">
-      <button mat-raised-button class="menu-button" routerLink="/view-products" >
-        <mat-icon>person</mat-icon> View products 
+      <button mat-raised-button class="menu-button" routerLink="/employee" >
+        <mat-icon>person</mat-icon> View employees 
       </button>
     </mat-card>
     
