--- a/Speciality-Metals/src/Components/Login/home/home.component.html
+++ b/Speciality-Metals/src/Components/Login/home/home.component.html
@@ -25,7 +25,7 @@
     </mat-card>
     
     <mat-card class="menu-card">
-      <button mat-raised-button class="menu-button" routerLink="/employee" >
+      <button mat-raised-button class="menu-button" routerLink="/employee-home" >
         <mat-icon>person</mat-icon> Staff 
       </button>
     </mat-card>
