--- a/Speciality-Metals/src/Components/Login/employee/employee.component.html
+++ b/Speciality-Metals/src/Components/Login/employee/employee.component.html
@@ -1,41 +1,10 @@
-<div class="employee-container">
-    <form [formGroup]="employeeForm" (ngSubmit)="onSubmit()">
-      <mat-form-field appearance="fill">
-        <mat-label>Employee Name</mat-label>
-        <input matInput formControlName="employee_Name" />
-      </mat-form-field>
-  
-      <mat-form-field appearance="fill">
-        <mat-label>Age</mat-label>
-        <input matInput type="number" formControlName="employee_Age" />
-      </mat-form-field>
-  
-      <mat-form-field appearance="fill">
-        <mat-label>ID Number</mat-label>
-        <input matInput formControlName="iD_Number" />
-      </mat-form-field>
-  
-      <mat-form-field appearance="fill">
-        <mat-label>Employee Code</mat-label>
-        <input matInput formControlName="employee_Code" />
-      </mat-form-field>
-  
-      <!-- Dropdown for Employee_Type_ID -->
-      <mat-form-field appearance="fill">
-        <mat-label>Employee Type</mat-label>
-        <mat-select formControlName="employee_Type_ID">
-          <mat-option *ngFor="let type of employeeTypes" [value]="type.id">
-            {{ type.name }}
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
-  
-      <div class="form-actions">
-        <button mat-raised-button color="primary" type="submit">Add Employee</button>
-        <button mat-raised-button color="warn" type="button" (click)="onCancel()">Cancel</button>
-      </div>
-    </form>
-  
+<mat-toolbar color="primary">
+    <span class="heading">Speciality Metals</span>
+    <span class="spacer"></span>
+    <a mat-button color="warn" routerLink="/logout">Log out</a>
+    <img class="photo"  src=".../src/assets/Special_Metals_Corporation_logo.svg.png">
+  </mat-toolbar>
+  <div>
     <!-- Employee List Table -->
     <div class="employee-list">
       <h2>Employee List</h2>
