--- a/Speciality-Metals/src/Components/supplier/add-supplier/add-supplier.component.css
+++ b/Speciality-Metals/src/Components/supplier/add-supplier/add-supplier.component.css
@@ -1,4 +1,4 @@
-.employee-container {
+.supplier-container {
     max-width: 600px;
     margin: 0 auto;
     padding: 20px;
@@ -15,11 +15,13 @@
   mat-form-field {
     width: 100%;
   }
+  
   .spacer {
     flex: 1 1 auto;
     text-align: center;
   }
   
-  .photo{
+  .photo {
     font-size: 20;
   }
+  
