--- a/Speciality-Metals/src/app/components/login/login-component/login-component/login-component.component.css
+++ b/Speciality-Metals/src/app/components/login/login-component/login-component/login-component.component.css
@@ -2,7 +2,7 @@ body, html {
     height: 100%;
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
-    background: url('../../../../assets/metal-texture-background-with-rivets_1048-8018.jpg') no-repeat center center fixed; /* Full background image */
+    background: url('/assets/metal-texture-background-with-rivets_1048-8018.jpg') no-repeat center center fixed; /* Full background image */
     background-size: cover;
     color: white;
   }
