--- a/Speciality-Metals/src/app/components/login/login-component/home-component/home-component/home-component.component.html
+++ b/Speciality-Metals/src/app/components/login/login-component/home-component/home-component/home-component.component.html
@@ -41,4 +41,9 @@
         <mat-icon>inventory</mat-icon> Products 
       </button>
     </mat-card>
+    <mat-card class="menu-card">
+      <button mat-raised-button class="menu-button" routerLink="/customer">
+        <mat-icon>person</mat-icon> Customers 
+      </button>
+    </mat-card>
   </div>
