--- a/Speciality-Metals/src/app/components/customer/view-customer/view-customer/view-customer.component.html
+++ b/Speciality-Metals/src/app/components/customer/view-customer/view-customer/view-customer.component.html
@@ -1,1 +1,44 @@
-<p>view-customer works!</p>
+<mat-toolbar color="primary">
+    <span class="heading">Speciality Metals</span>
+    <span class="spacer"></span>
+    <a mat-button color="warn" routerLink="/logout">Log out</a>
+  </mat-toolbar>
+  
+  <div class="supplier-list-container">
+    <div class="supplier-list">
+      <h2>Customer List</h2>
+      <button mat-raised-button color="primary" routerLink="/add-customer">Add Customer</button>
+      <table mat-table [dataSource]="customers" class="mat-elevation-z8">
+  
+        <!-- Customer Name Column -->
+        <ng-container matColumnDef="customer_Name">
+          <th mat-header-cell *matHeaderCellDef> Customer Name </th>
+          <td mat-cell *matCellDef="let element"> {{element.customer_Name}} </td>
+        </ng-container>
+  
+        <!-- Phone Number Column -->
+        <ng-container matColumnDef="phone_number">
+          <th mat-header-cell *matHeaderCellDef> Phone Number </th>
+          <td mat-cell *matCellDef="let element"> {{element.phone_number}} </td>
+        </ng-container>
+  
+        <!-- Actions Column -->
+        <ng-container matColumnDef="actions">
+          <th mat-header-cell *matHeaderCellDef> Actions </th>
+          <td mat-cell *matCellDef="let element">
+            <button mat-icon-button color="primary" (click)="openEditCustomerDialog(element)">
+                <mat-icon>edit</mat-icon>
+              </button>
+            <button mat-icon-button color="warn" (click)="deleteCustomer(element.customerID)">
+              <mat-icon>delete</mat-icon>
+            </button>
+          </td>
+        </ng-container>
+  
+        <!-- Header and Row Declarations -->
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+    </div>
+  </div>
+  
