--- a/Speciality-Metals/src/app/components/incoming/view-incomings/view-incomings.component.html
+++ b/Speciality-Metals/src/app/components/incoming/view-incomings/view-incomings.component.html
@@ -1,60 +1,88 @@
-<div class="mat-elevation-z8 container">
-  <h2 class="mat-title">Incoming Records</h2>
-  <table mat-table [dataSource]="incomings" class="mat-elevation-z8" style="width: 100%; margin: 20px 0;">
+<div class="incoming-container mat-elevation-z8">
+  <div class="page-header">
+    <h1 class="mat-display-1">Incoming Products</h1>
+    <p>
+      This page lists all the incoming products. You can add, update, or delete
+      incoming records.
+    </p>
+  </div>
 
+  <!-- Action Buttons -->
+  <div class="action-buttons">
+    <button class="btn-add mat-raised-button mat-primary" (click)="toggleAddForm()">
+      <mat-icon>add_circle</mat-icon> Add Incoming Product
+    </button>
+  </div>
+
+  <!-- Incoming Products Table -->
+  <h2 class="mat-title">Incoming Records</h2>
+  <table mat-table [dataSource]="incomings" class="mat-elevation-z8 product-table">
     <!-- ID Column -->
     <ng-container matColumnDef="incomingID">
-      <th mat-header-cell *matHeaderCellDef> ID </th>
-      <td mat-cell *matCellDef="let incoming"> {{ incoming.incomingID }} </td>
+      <th mat-header-cell *matHeaderCellDef>ID</th>
+      <td mat-cell *matCellDef="let incoming">{{ incoming.incomingID }}</td>
     </ng-container>
 
     <!-- Date Column -->
     <ng-container matColumnDef="incoming_Date">
-      <th mat-header-cell *matHeaderCellDef> Date </th>
-      <td mat-cell *matCellDef="let incoming"> {{ incoming.incoming_Date | date: 'shortDate' }} </td>
+      <th mat-header-cell *matHeaderCellDef>Date</th>
+      <td mat-cell *matCellDef="let incoming">{{ incoming.incoming_Date | date: 'shortDate' }}</td>
     </ng-container>
 
     <!-- Gross Weight Column -->
     <ng-container matColumnDef="gross_Weight">
-      <th mat-header-cell *matHeaderCellDef> Gross Weight </th>
-      <td mat-cell *matCellDef="let incoming"> {{ incoming.gross_Weight }} </td>
+      <th mat-header-cell *matHeaderCellDef>Gross Weight</th>
+      <td mat-cell *matCellDef="let incoming">{{ incoming.gross_Weight }}</td>
     </ng-container>
 
     <!-- Tare Weight Column -->
     <ng-container matColumnDef="tare_Weight">
-      <th mat-header-cell *matHeaderCellDef> Tare Weight </th>
-      <td mat-cell *matCellDef="let incoming"> {{ incoming.tare_Weight }} </td>
+      <th mat-header-cell *matHeaderCellDef>Tare Weight</th>
+      <td mat-cell *matCellDef="let incoming">{{ incoming.tare_Weight }}</td>
     </ng-container>
 
     <!-- Net Weight Column -->
     <ng-container matColumnDef="net_Weight">
-      <th mat-header-cell *matHeaderCellDef> Net Weight </th>
-      <td mat-cell *matCellDef="let incoming"> {{ incoming.net_Weight }} </td>
+      <th mat-header-cell *matHeaderCellDef>Net Weight</th>
+      <td mat-cell *matCellDef="let incoming">{{ incoming.net_Weight }}</td>
     </ng-container>
 
     <!-- GRV Number Column -->
-    <ng-container matColumnDef="gRV_Number">
-      <th mat-header-cell *matHeaderCellDef> GRV Number </th>
-      <td mat-cell *matCellDef="let incoming"> {{ incoming.gRV_Number }} </td>
+    <ng-container matColumnDef="grV_Number">
+      <th mat-header-cell *matHeaderCellDef>GRV Number</th>
+      <td mat-cell *matCellDef="let incoming">{{ incoming.grV_Number }}</td>
     </ng-container>
 
     <!-- Supplier ID Column -->
     <ng-container matColumnDef="supplierID">
-      <th mat-header-cell *matHeaderCellDef> Supplier ID </th>
-      <td mat-cell *matCellDef="let incoming"> {{ incoming.supplierID }} </td>
+      <th mat-header-cell *matHeaderCellDef>Supplier ID</th>
+      <td mat-cell *matCellDef="let incoming">{{ incoming.supplierID }}</td>
     </ng-container>
 
     <!-- Product ID Column -->
     <ng-container matColumnDef="productID">
-      <th mat-header-cell *matHeaderCellDef> Product ID </th>
-      <td mat-cell *matCellDef="let incoming"> {{ incoming.productID }} </td>
+      <th mat-header-cell *matHeaderCellDef>Product ID</th>
+      <td mat-cell *matCellDef="let incoming">{{ incoming.productID }}</td>
+    </ng-container>
+
+    <!-- Edit and Delete Buttons -->
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef>Actions</th>
+      <td mat-cell *matCellDef="let incoming">
+        <button mat-icon-button color="primary" >
+          <mat-icon>edit</mat-icon>
+        </button>
+        <button mat-icon-button color="warn" (click)="deleteIncoming(incoming.incomingID)">
+          <mat-icon>delete</mat-icon>
+        </button>
+      </td>
     </ng-container>
 
     <!-- Header and Row -->
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-
   </table>
 
+  <!-- Paginator -->
   <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
 </div>
