--- a/Speciality-Metals/src/app/components/products/view-products/view-products/view-products.component.html
+++ b/Speciality-Metals/src/app/components/products/view-products/view-products/view-products.component.html
@@ -1,37 +1,56 @@
 <mat-toolbar color="primary">
-    <span class="heading">Speciality Metals</span>
-    <span class="spacer"></span>
-    <a mat-button color="warn" routerLink="/logout">Log out</a>
-    <img class="photo" src=".../src/assets/Special_Metals_Corporation_logo.svg.png" alt="Logo">
-  </mat-toolbar>
-  
-  <div class="product-list-container">
-    <div class="product-list">
-      <h2>Product List</h2>
-      <button mat-raised-button color="primary" routerLink="/add-product">Add Product</button>
-      <table mat-table [dataSource]="products" class="mat-elevation-z8">
-  
-        <!-- Product Name Column -->
-        <ng-container matColumnDef="Product_Name">
-          <th mat-header-cell *matHeaderCellDef> Product Name </th>
-          <td mat-cell *matCellDef="let element"> {{element.product_Name}} </td>
-        </ng-container>
-  
-        <!-- Actions Column -->
-        <ng-container matColumnDef="actions">
-          <th mat-header-cell *matHeaderCellDef> Actions </th>
-          <td mat-cell *matCellDef="let element">
-            <button mat-icon-button color="warn" (click)="deleteProduct(element.ProductID)">
-              <mat-icon>delete</mat-icon>
-            </button>
-            <!-- You can add more actions like Edit here -->
-          </td>
-        </ng-container>
-  
-        <!-- Header and Row Declarations -->
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      </table>
-    </div>
+  <span class="heading">Speciality Metals</span>
+  <span class="spacer"></span>
+  <a mat-button color="warn" routerLink="/logout">Log out</a>
+  <img class="photo" src=".../src/assets/Special_Metals_Corporation_logo.svg.png" alt="Logo">
+</mat-toolbar>
+
+<div class="product-list-container">
+  <div class="product-list">
+    <h2>Product List</h2>
+    <button mat-raised-button color="primary" routerLink="/add-product">Add Product</button>
+    <table mat-table [dataSource]="products" class="mat-elevation-z8">
+
+      <!-- Product Name Column -->
+      <ng-container matColumnDef="Product_Name">
+        <th mat-header-cell *matHeaderCellDef> Product Name </th>
+        <td mat-cell *matCellDef="let element"> {{element.product_Name}} </td>
+      </ng-container>
+
+      <!-- Actions Column -->
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef> Actions </th>
+        <td mat-cell *matCellDef="let element">
+          <button mat-icon-button color="warn" (click)="deleteProduct(element.ProductID)">
+            <mat-icon>delete</mat-icon>
+          </button>
+          <button mat-icon-button color="primary" (click)="openEditPopup(element)">
+            <mat-icon>edit</mat-icon>
+          </button>
+        </td>
+      </ng-container>
+
+      <!-- Header and Row Declarations -->
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
   </div>
-  
+</div>
+
+<!-- Edit Product Modal -->
+<div *ngIf="isEditPopupVisible" class="popup-overlay">
+<div class="popup">
+  <h2>Edit Product</h2>
+  <form [formGroup]="editForm" (ngSubmit)="saveProduct()">
+    <mat-form-field appearance="fill">
+      <mat-label>Product Name</mat-label>
+      <input matInput formControlName="Product_Name" />
+    </mat-form-field>
+    
+    <div class="form-actions">
+      <button mat-raised-button color="primary" type="submit">Save</button>
+      <button mat-raised-button color="warn" type="button" (click)="closeEditPopup()">Cancel</button>
+    </div>
+  </form>
+</div>
+</div>
