--- a/Speciality-Metals/src/app/components/supplier/view-supplier/view-supplier/view-supplier.component.css
+++ b/Speciality-Metals/src/app/components/supplier/view-supplier/view-supplier/view-supplier.component.css
@@ -14,6 +14,28 @@
     margin-bottom: 20px;
     color: black; 
   }
+  .popup-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+    z-index: 1000;
+  }
+  
+  .popup {
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    width: 400px;
+    max-width: 90vw; /* For responsiveness */
+    text-align: center;
+  }
   
   button {
     margin-bottom: 20px;
