--- a/Speciality-Metals/src/app/components/supplier/view-supplier/view-supplier/view-supplier.component.html
+++ b/Speciality-Metals/src/app/components/supplier/view-supplier/view-supplier/view-supplier.component.html
@@ -1,55 +1,89 @@
 <mat-toolbar color="primary">
-    <span class="heading">Speciality Metals</span>
-    <span class="spacer"></span>
-    <a mat-button color="warn" routerLink="/logout">Log out</a>
-    <img class="photo" src=".../src/assets/Special_Metals_Corporation_logo.svg.png" alt="Logo">
-  </mat-toolbar>
-  
-  <div class="supplier-list-container">
-    <div class="supplier-list">
-      <h2>Supplier List</h2>
-      <button mat-raised-button color="primary" routerLink="/add-supplier">Add Supplier</button>
-      <table mat-table [dataSource]="suppliers" class="mat-elevation-z8">
-  
-        <!-- Supplier Name Column -->
-        <ng-container matColumnDef="supplier_Name">
-          <th mat-header-cell *matHeaderCellDef> Supplier Name </th>
-          <td mat-cell *matCellDef="let element"> {{element.supplier_Name}} </td>
-        </ng-container>
-  
-        <!-- Phone Number Column -->
-        <ng-container matColumnDef="phone_Number">
-          <th mat-header-cell *matHeaderCellDef> Phone Number </th>
-          <td mat-cell *matCellDef="let element"> {{element.phone_Number}} </td>
-        </ng-container>
-  
-        <!-- Supplier ID Column -->
-        <ng-container matColumnDef="supplierID">
-          <th mat-header-cell *matHeaderCellDef> Supplier ID </th>
-          <td mat-cell *matCellDef="let element"> {{element.supplierID}} </td>
-        </ng-container>
-  
-        <!-- Product ID Column -->
-        <ng-container matColumnDef="productID">
-          <th mat-header-cell *matHeaderCellDef> Product ID </th>
-          <td mat-cell *matCellDef="let element"> {{element.productID}} </td>
-        </ng-container>
-  
-        <!-- Actions Column -->
-        <ng-container matColumnDef="actions">
-          <th mat-header-cell *matHeaderCellDef> Actions </th>
-          <td mat-cell *matCellDef="let element">
-            <button mat-icon-button color="warn" (click)="deleteSupplier(element.supplierID)">
-              <mat-icon>delete</mat-icon>
-            </button>
-            <!-- You can add more actions like Edit here -->
-          </td>
-        </ng-container>
-  
-        <!-- Header and Row Declarations -->
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      </table>
-    </div>
+  <span class="heading">Speciality Metals</span>
+  <span class="spacer"></span>
+  <a mat-button color="warn" routerLink="/logout">Log out</a>
+</mat-toolbar>
+
+<div class="supplier-list-container">
+  <div class="supplier-list">
+    <h2>Supplier List</h2>
+    <button mat-raised-button color="primary" routerLink="/add-supplier">Add Supplier</button>
+    <table mat-table [dataSource]="suppliers" class="mat-elevation-z8">
+
+      <!-- Supplier Name Column -->
+      <ng-container matColumnDef="supplier_Name">
+        <th mat-header-cell *matHeaderCellDef> Supplier Name </th>
+        <td mat-cell *matCellDef="let element"> {{element.supplier_Name}} </td>
+      </ng-container>
+
+      <!-- Phone Number Column -->
+      <ng-container matColumnDef="phone_Number">
+        <th mat-header-cell *matHeaderCellDef> Phone Number </th>
+        <td mat-cell *matCellDef="let element"> {{element.phone_Number}} </td>
+      </ng-container>
+
+      <!-- Supplier ID Column -->
+      <ng-container matColumnDef="supplierID">
+        <th mat-header-cell *matHeaderCellDef> Supplier ID </th>
+        <td mat-cell *matCellDef="let element"> {{element.supplierID}} </td>
+      </ng-container>
+
+      <!-- Product Name Column -->
+      <ng-container matColumnDef="product_Name">
+        <th mat-header-cell *matHeaderCellDef> Product Name </th>
+        <td mat-cell *matCellDef="let element"> {{element.product_Name}} </td>
+      </ng-container>
+
+      <!-- Actions Column -->
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef> Actions </th>
+        <td mat-cell *matCellDef="let element">
+          <button mat-icon-button color="warn" (click)="deleteSupplier(element.supplierID)">
+            <mat-icon>delete</mat-icon>
+          </button>
+          <button mat-icon-button color="primary" (click)="openEditPopup(element)">
+            <mat-icon>edit</mat-icon>
+          </button>
+        </td>
+      </ng-container>
+
+      <!-- Header and Row Declarations -->
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
   </div>
-  
+</div>
+
+<!-- Popup Form for Editing Supplier -->
+<div *ngIf="isEditPopupVisible" class="popup-overlay">
+  <div class="popup">
+    <h2>Edit Supplier</h2>
+    <form [formGroup]="editForm" (ngSubmit)="saveSupplier()">
+      <mat-form-field appearance="fill">
+        <mat-label>Supplier Name</mat-label>
+        <input matInput formControlName="supplier_Name" />
+      </mat-form-field>
+
+      <mat-form-field appearance="fill">
+        <mat-label>Phone Number</mat-label>
+        <input matInput formControlName="phone_Number" />
+      </mat-form-field>
+
+      <!-- Product Name Dropdown -->
+      <mat-form-field appearance="fill">
+        <mat-label>Product Name</mat-label>
+        <mat-select formControlName="productID">
+          <mat-option *ngFor="let product of products" [value]="product.ProductID">
+            {{ product.product_Name }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+      
+      <!-- Buttons -->
+      <button mat-raised-button color="primary" [disabled]="!editForm.valid" type="submit">
+        Save
+      </button>
+      <button mat-raised-button color="warn" (click)="closeEditPopup()">Cancel</button>
+    </form>
+  </div>
+</div>
