--- a/Speciality-Metals/src/app/components/outgoing/outgoing-component/outgoing-component.component.html
+++ b/Speciality-Metals/src/app/components/outgoing/outgoing-component/outgoing-component.component.html
@@ -16,15 +16,23 @@
         </div>
         
         <div class="input-row">
-          <mat-form-field class="form-group">
-            <mat-label>Customer ID</mat-label>
-            <input matInput formControlName="customerID" type="number" />
-          </mat-form-field>
-          <mat-form-field class="form-group">
-            <mat-label>Product ID</mat-label>
-            <input matInput formControlName="productID" type="number" />
-          </mat-form-field>
-        </div>
+            <mat-form-field class="form-group">
+              <mat-label>Customer Name</mat-label>
+              <input matInput formControlName="customerName" type="text" />
+            </mat-form-field>
+            <mat-form-field class="form-group">
+              <mat-label>Customer Code</mat-label>
+              <input matInput formControlName="customerCode" type="text" />
+            </mat-form-field>
+            <mat-form-field class="form-group">
+              <mat-label>Product Name</mat-label>
+              <input matInput formControlName="productName" type="text" />
+            </mat-form-field>
+            <mat-form-field class="form-group">
+              <mat-label>Product Code</mat-label>
+              <input matInput formControlName="productCode" type="text" />
+            </mat-form-field>
+          </div>
         
         <div class="input-row">
           <mat-form-field class="form-group">
