--- a/Speciality-Metals/src/app/components/supplier/view-supplier/view-supplier/view-supplier.component.html
+++ b/Speciality-Metals/src/app/components/supplier/view-supplier/view-supplier/view-supplier.component.html
@@ -73,7 +73,7 @@
       <mat-form-field appearance="fill">
         <mat-label>Product Name</mat-label>
         <mat-select formControlName="productID">
-          <mat-option *ngFor="let product of products" [value]="product.ProductID">
+          <mat-option *ngFor="let product of products" [value]="product.productID">
             {{ product.product_Name }}
           </mat-option>
         </mat-select>
