--- a/Speciality-Metals/src/app/components/outgoing/outgoing-component/outgoing-component.component.css
+++ b/Speciality-Metals/src/app/components/outgoing/outgoing-component/outgoing-component.component.css
@@ -150,3 +150,9 @@ mat-paginator {
     display: none;
   }
 }
+
+.export-excel {
+  margin-left: 10px;
+  background-color: #217346;  /* Excel green color */
+  color: white;
+}
