--- a/Speciality-Metals/src/app/components/login/login-component/home-component/home-component/home-component.component.html
+++ b/Speciality-Metals/src/app/components/login/login-component/home-component/home-component/home-component.component.html
@@ -23,6 +23,11 @@
         <mat-icon>event_note</mat-icon> Outgoing products 
       </button>
     </mat-card>
+    <mat-card class="menu-card">
+      <button mat-raised-button class="menu-button" routerLink="/sundry">
+        <mat-icon>calendar_today</mat-icon> Sundry
+      </button>
+    </mat-card>
     
     <mat-card class="menu-card">
       <button mat-raised-button class="menu-button" routerLink="/employee-home" >
