--- a/Speciality-Metals/src/app/components/reporting/reporting-component/reporting-component.component.html
+++ b/Speciality-Metals/src/app/components/reporting/reporting-component/reporting-component.component.html
@@ -1,1 +1,26 @@
-<p>reporting-component works!</p>
+<mat-toolbar color="primary">
+    <span class="heading">Speciality Metals</span>
+    <span class="spacer"></span>
+    <a mat-button color="warn" routerLink="/logout">Log out</a>
+    <img class="photo"  src=".../src/assets/Special_Metals_Corporation_logo.svg.png">
+  </mat-toolbar>
+  
+  <div class="button-grid">
+    <button class="menu-button" routerLink="/page1">All GRVs issued</button>
+    <button class="menu-button" routerLink="/page2">All Deliveries Weighed</button>
+    <button class="menu-button" routerLink="/page3">All Sundry transactions</button>
+    <button class="menu-button" routerLink="/page4">View GRV photos</button>
+    <button class="menu-button" routerLink="/page5">View Delivery Note photos</button>
+    <button class="menu-button" routerLink="/page6">View SUNDRY NOTE photos</button>
+    <button class="menu-button" routerLink="/page7">Customer search for GRV</button>
+    <button class="menu-button" routerLink="/reportCust">Customer search for Delivery Notes</button>
+    <button class="menu-button" routerLink="/page9">Customer search for sundries</button>
+    <button class="menu-button" routerLink="/page10">Product search for GRVs</button>
+    <button class="menu-button" routerLink="/page11">Product search for delivery notes</button>
+    <button class="menu-button" routerLink="/page12">Product search for sundries</button>
+    <div class="centered-button">
+      <button class="menu-button" routerLink="/page13">Return to home</button>
+    </div>
+  </div>
+  
+  
