--- a/Speciality-Metals/src/app/components/reporting/reporting-component/reporting-component.component.html
+++ b/Speciality-Metals/src/app/components/reporting/reporting-component/reporting-component.component.html
@@ -16,7 +16,7 @@
     <button class="menu-button" routerLink="/reportCust">Customer search for Delivery Notes</button>
     <button class="menu-button" routerLink="/page9">Customer search for sundries</button>
     <button class="menu-button" routerLink="/page10">Product search for GRVs</button>
-    <button class="menu-button" routerLink="/page11">Product search for delivery notes</button>
+    <button class="menu-button" routerLink="/reportProduct">Product search for delivery notes</button>
     <button class="menu-button" routerLink="/page12">Product search for sundries</button>
     <div class="centered-button">
       <button class="menu-button" routerLink="/page13">Return to home</button>
