--- a/Speciality-Metals/src/app/components/reporting/reporting-component/reporting-component.component.html
+++ b/Speciality-Metals/src/app/components/reporting/reporting-component/reporting-component.component.html
@@ -7,7 +7,7 @@
   
   <div class="button-grid">
     <button class="menu-button" routerLink="/page1">All GRVs issued</button>
-    <button class="menu-button" routerLink="/page2">All Deliveries Weighed</button>
+    <button class="menu-button" routerLink="/weightReport">All Deliveries Weighed</button>
     <button class="menu-button" routerLink="/page3">All Sundry transactions</button>
     <button class="menu-button" routerLink="/page4">View GRV photos</button>
     <button class="menu-button" routerLink="/page5">View Delivery Note photos</button>
